# rle

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: RLE.cpp  RLE.h
src/test/: rle.cpp
src/ui/: MainFrame.cpp  MainFrame.h
